--- a/kobain.html
+++ b/kobain.html
@@ -12,7 +12,7 @@
     <header>
       <nav class="navbar">
         <ul tabindex="0">
-          <li class="navbar-logo">Hungry Its Angry</li>
+          <li class="navbar-logo">Mari Makan</li>
           <button class="navbar-toggle" tabindex="0"><i class="fa-solid fa-bars"></i></button>
           <li class="navbar-links"><a href="/Project/src/pages/tanatap/home.html">Home</a></li>
           <li class="navbar-links"><a href="/Project/src/pages/tanatap/catalogue.html">Catalogue</a></li>
